getnetworkghps instead of getnetworkhashps

--- a/views/info.jade
+++ b/views/info.jade
@@ -42,9 +42,9 @@ block content
 
         if settings.index.show_hashrate == true
           :markdown
-            *  **getnetworkhashps**  
-               *#{settings.locale.api_getnetworkhashps}*  
-               [#{address}/api/getnetworkhashps](/api/getnetworkhashps)
+            *  **getnetworkghps**
+               *#{settings.locale.api_getnetworkghps}*
+               [#{address}/api/getnetworkghps](/api/getnetworkhghps)
 
 
 
