listunspent, txinfo, sendrawtransaction support

--- a/views/info.jade
+++ b/views/info.jade
@@ -38,13 +38,18 @@ block content
              *#{settings.locale.api_getrawtransaction}*  
              [#{address}/api/getrawtransaction?txid=#{hashes.txhash}&decrypt=0](/api/getrawtransaction?txid=#{hashes.txhash}&decrypt=0)  
              [#{address}/api/getrawtransaction?txid=#{hashes.txhash}&decrypt=1](/api/getrawtransaction?txid=#{hashes.txhash}&decrypt=1)
-        
+
+          *  **sendrawtransaction [hex]**  
+             *#{settings.locale.api_sendrawtransaction}*  
+             [#{address}/api/sendrawtransaction?hex=00f0](/api/sendrawtransaction?hex=00f0)  
+
+       
 
         if settings.index.show_hashrate == true
           :markdown
-            *  **getnetworkghps**
-               *#{settings.locale.api_getnetworkghps}*
-               [#{address}/api/getnetworkghps](/api/getnetworkhghps)
+            *  **getnetworkghps**  
+               *#{settings.locale.api_getnetworkghps}*  
+               [#{address}/api/getnetworkghps](/api/getnetworkghps)
 
 
 
@@ -99,6 +104,14 @@ block content
           *  **getaddress (/ext/getaddress/hash)**  
                *Returns information for given address*  
                [#{address}/ext/getaddress/#{hashes.address}](/ext/getaddress/#{hashes.address})
+
+          *  **listunspent (/ext/listunspent/hash)**  
+               *Returns unspent transactions for given address*  
+               [#{address}/ext/listunspent/#{hashes.address}](/ext/listunspent/#{hashes.address})
+
+          *  **txinfo (/ext/txinfo/hash)**  
+               *Returns information about given transaction*  
+               [#{address}/ext/txinfo/#{hashes.txhash}](/ext/txinfo/#{hashes.txhash})
 
           *  **getbalance (/ext/getbalance/hash)**  
                *Returns current balance of given address*  
